--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,56 @@
-.o{
-    color: black;
-    .u{
-        background-color: antiquewhite;
-    }
-}
+
+
+// ------------------------------------
+// Utils
+// ------------------------------------
+
+@import './utils/variables';
+@import './utils/functions';
+@import './utils/mixins';
+@import './utils/vendors';
+
+// ------------------------------------ // ------------------------------------
+// ------------------------------------
+// Base
+// ------------------------------------
+@import './base/fonts';
+@import './base/reset';
+@import './base/base';
+
+
+// ------------------------------------ // ------------------------------------
+// ------------------------------------
+// About
+// ------------------------------------
+
+@import './pages/about/about';
+@import './pages/about/content';
+@import './pages/about/gallery';
+@import './pages/about/highlight';
+
+// ------------------------------------ // ------------------------------------
+
+// ------------------------------------
+// Collections
+// ------------------------------------
+
+@import './pages/collections/collections';
+
+// ------------------------------------ // ------------------------------------
+
+// ------------------------------------
+// Details
+// ------------------------------------
+
+@import './pages/details/details';
+
+// ------------------------------------ // ------------------------------------
+
+// ------------------------------------
+// Home
+// ------------------------------------
+
+@import './pages/home/home';
+
+// ------------------------------------ // ------------------------------------
+
