--- a/views/pages/collections.pug
+++ b/views/pages/collections.pug
@@ -11,14 +11,6 @@ block content
           .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
           .collections__titles__title=collection.data.title
 
-        each collection, index in collections
-          .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
-          .collections__titles__title=collection.data.title
-
-        each collection, index in collections
-          .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
-          .collections__titles__title=collection.data.title
-
       .collections__gallery
         .collections__gallery__wrapper
           each collection, index in collections
@@ -33,8 +25,8 @@ block content
             h1.collections__article__title=`${collection.data.title} ${home.data.collection}`
             p.collections__article__description=collection.data.description
 
-      .collections__mobile
-        each collection, index in collections
-          .collections__mobile__item
-            .collections__mobile__item__label!=`${home.data.collection}<br>${Numbers(index)}`
-            .collections__mobile__item__title=collection.data.title
+      //- .collections__mobile
+      //-   each collection, index in collections
+      //-     .collections__mobile__item
+      //-       .collections__mobile__item__label!=`${home.data.collection}<br>${Numbers(index)}`
+      //-       .collections__mobile__item__title=collection.data.title
