--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -1,7 +1,7 @@
 nav.navigation  
     .navigation__wrapper   
         a.navigation__link(href='/')
-            | Affo 
+            | Home 
 
             svg.navigation__link__icon
 
