--- a/views/partials/preloader.pug
+++ b/views/partials/preloader.pug
@@ -1,6 +1,4 @@
 .preloader 
-    p.preloader__text
-    | How are you
-    | Website is loading
-
+    p.preloader__text!=preloader.data.title.replace(/\n/g,'<br>')
+       
     .preloader__number 0%
