--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -1,22 +1,23 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+  box-sizing : border-box;
   user-select: none
 }
 
 html {
   @extend %cover;
-  $vw: 100vw;
+  $vw      : 100vw;
   font-size: calc($vw / 1920px * 10px);
-  position: fixed;
+
+  position: fixed; //Per rimuovere lo scroll 
   line-height: 1;
-  overflow: hidden;
-  background: $color-contessa;
-  color: $color-white;
+  overflow   : hidden;
+  // background : $color-contessa;
+  // color      : $color-white;
 
   @include media('<phone') {
-    font-size: calc($vw / 750px * 10px);
+    font-size: calc($vw / 750 * 10);
   }
 }
 
@@ -28,28 +29,28 @@ body {
 }
 
 a {
-  color: inherit;
+  color          : inherit;
   text-decoration: none;
-  outline: none;
+  outline        : none;
 }
 
 button {
-  border: none;
+  border    : none;
   background: none;
-  color: inherit;
-  cursor: pointer;
-  outline: none;
+  color     : inherit;
+  cursor    : pointer;
+  outline   : none;
 }
 
-// img {
-//   opacity: 0;
-//   transition: opacity 0.4s ease;
-//   vertical-align: middle;
+img {
+  // opacity: 0;
+  // transition: opacity 0.4s ease;
+  vertical-align: middle;
 
-//   &.loaded {
-//     opacity: 1;
-//   }
-// }
+  // &.loaded {
+  //   opacity: 1;
+  // }
+}
 
 // canvas {
 //     pointer-events: none;
@@ -59,14 +60,15 @@ button {
 
 .content {
   @extend %cover;
+  
 }
 
-// [data-animation='paragraph'],
-// [data-animation='label'],
-// [data-animation='title'] {
-//   span {
-//     display: inline-block;
-//     overflow: hidden;
-//     vertical-align: top;
-//   }
-// }
+[data-animation='paragraph'],
+[data-animation='label'],
+[data-animation='title'] {
+  span {
+    display: inline-block;//!questo permette di modificare l altezza e la larghezza di un oggetto
+    overflow: hidden;
+    vertical-align: top;
+  }
+}
