--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -4,29 +4,30 @@
   background: $color-contessa;
   color     : $color-white;
   text-align: center;
-  display   : none;
   z-index   : z('preloader');
 }
 
 .preloader__text {
-  // font-size: 0;
+   font-size: 0;
   // max-width: 66rem;
   @extend %title-53;
 
-  // span {
-  //   display: inline-block;
-  //   overflow: hidden;
-  // }
+  span { //!é creato automaticamente dalla funzione nell utils text
+    display: inline-block; //!Senza questo le animazioni non funzionerebbero (Per l'altezza)
+    overflow: hidden;
+  }
 
-  // span span {
-  //   @extend %title-53;
-  // }
+  span span {
+    @extend %title-53;
+  }
 }
 
 .preloader__number {
   @extend %description-14;
   position : absolute;
+
   overflow : hidden;
+
   bottom   : 5.1rem;
   left     : 50%;
   transform: translateX(-50%);
