--- a/styles/pages/details/details.scss
+++ b/styles/pages/details/details.scss
@@ -1,7 +1,7 @@
 .detail {
-  // @extend %page;
+  @extend %page;
   @extend %center;
-  
+
   // background-color: $color-quicksand;
   // color: $color-white;
 
