--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -10,21 +10,22 @@ block content
                 .about__gallery__wrapper 
                     each media in about.data.gallery 
                         figure.about__gallery__media 
-                            img.about__gallery__media_image(alt=media.image.alt src=media.image.url)
+                            img.about__gallery__media_image(alt=media.image.alt data-src=media.image.url)
 
-            each section  in about.data.body 
+            each section in about.data.body 
                 if section.slice_type == 'title'
-                    h2.about__title=section.primary.text
-                
+                    h2.about__title(data-animation="title")!=section.primary.text
+
                 if section.slice_type=='content'
-                    section.about__content 
+                    section.about__content(class=`${section.primary.type === 'Left' ? 'about__content--left' : 'about__content--right'}`) 
                         .about__content__wrapper 
-                            p.about__content__label=section.primary.label 
+                            p.about__content__label(data-animation="label")=section.primary.label 
 
                             .about__content__description!=PrismicH.asHTML(section.primary.description).replace(/<p>/g, '<p data-animation="paragraph">')
 
                             figure.about__content__media
-                                img.about__content__media__image(src=section.primary.image.url alt=section.primary.image.alt)
+                                img.about__content__media__image(data-src=section.primary.image.url alt=section.primary.image.alt)
+
                 if section.slice_type == 'highlights'
                     section.about__highlight
                         .about__highlight__wrapper
@@ -35,11 +36,11 @@ block content
 
                             each media in section.items
                                 figure.about__highlight__media
-                                    img.about__highlight__media__image(src=media.image.url alt=media.image.alt)
+                                    img.about__highlight__media__image(data-src=media.image.url alt=media.image.alt)
 
                 if section.slice_type == 'gallery'
                     section.about__gallery
                         .about__gallery__wrapper
                             each media in section.items
                                 figure.about__gallery__media
-                                    img.about__gallery__media__image(src=media.image.url alt=media.image.alt)
+                                    img.about__gallery__media__image(data-src=media.image.url alt=media.image.alt)
