--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -15,6 +15,6 @@ block content
             .home__gallery
                 each media in home.data.gallery
                     figure.home__gallery__media
-                        img.home__gallery__media__image(src=media.image.url alt=media.image.alt)
+                        img.home__gallery__media__image(data-src=media.image.url alt=media.image.alt)
 
             a.home__link(href=Link(home.data.collections))=home.data.button
