--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -10,9 +10,9 @@ html {
   $vw      : 100vw;
   font-size: calc($vw / 1920px * 10px);
 
-  position: fixed; //Per rimuovere lo scroll 
-  line-height: 1;
-  overflow   : hidden;
+  position      : fixed; //Per rimuovere lo scroll 
+  line-height   : 1;
+  overflow      : hidden;
   // background : $color-contessa;
   // color      : $color-white;
 
@@ -26,49 +26,50 @@ body {
   font-family: $font-suisse-bp;
   @extend %description-16;
   position: fixed;
-}
 
-a {
-  color          : inherit;
-  text-decoration: none;
-  outline        : none;
-}
+ 
+  a {
+    color          : inherit;
+    text-decoration: none;
+    outline        : none;
+  }
 
-button {
-  border    : none;
-  background: none;
-  color     : inherit;
-  cursor    : pointer;
-  outline   : none;
-}
+  button {
+    border    : none;
+    background: none;
+    color     : inherit;
+    cursor    : pointer;
+    outline   : none;
+  }
 
-img {
-  // opacity: 0;
-  // transition: opacity 0.4s ease;
-  vertical-align: middle;
+  img {
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    vertical-align: middle;
 
-  // &.loaded {
-  //   opacity: 1;
+    &.loaded {
+      opacity: 1;
+    }
+  }
+
+  // canvas {
+  //     pointer-events: none;
+  //     position: relative;
+  //     z-index: z('canvas')
   // }
-}
 
-// canvas {
-//     pointer-events: none;
-//     position: relative;
-//     z-index: z('canvas')
-// }
+  .content {
+    @extend %cover;
 
-.content {
-  @extend %cover;
-  
-}
+  }
 
-[data-animation='paragraph'],
-[data-animation='label'],
-[data-animation='title'] {
-  span {
-    display: inline-block;//!questo permette di modificare l altezza e la larghezza di un oggetto
-    overflow: hidden;
-    vertical-align: top;
+  [data-animation='paragraph'],
+  [data-animation='label'],
+  [data-animation='title'] {
+    span {
+      display       : inline-block; //!questo permette di modificare l altezza e la larghezza di un oggetto
+      overflow      : hidden;
+      vertical-align: top;
+    }
   }
 }
